--- a/3-CSS/304-CSS-BOX-MODEL/CSS-304-02/index.html
+++ b/3-CSS/304-CSS-BOX-MODEL/CSS-304-02/index.html
@@ -1,58 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cafe Menu</title>
-    <link href="styles.css" rel="stylesheet"/>
-  </head>
-  <body>
-    <div class="menu">
-      <main>
-        <h1>CAMPER CAFE</h1>
-        <p class="established">Est. 2022</p>
-        <hr>
-        <section>
-          <h2>Coffee</h2>
-          <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" alt="coffee icon"/>
-          <article class="item">
-            <p class="flavor">French Vanilla</p><p class="price">3.00</p>
-          </article>
-          <article class="item">
-            <p class="flavor">Caramel Macchiato</p><p class="price">3.75</p>
-          </article>
-          <article class="item">
-            <p class="flavor">Pumpkin Spice</p><p class="price">3.50</p>
-          </article>
-          <article class="item">
-            <p class="flavor">Hazelnut</p><p class="price">4.00</p>
-          </article>
-          <article class="item">
-            <p class="flavor">Mocha</p><p class="price">4.50</p>
-          </article>
-        </section>
-        <section>        <h2>Desserts</h2>
-          <article class="item">
-            <p class="dessert">Donut</p><p class="price">1.50</p>
-          </article>
-          <article class="item">
-            <p class="dessert">Cherry Pie</p><p class="price">2.75</p>
-          </article>
-          <article class="item">
-            <p class="dessert">Cheesecake</p><p class="price">3.00</p>
-          </article>
-          <article class="item">
-            <p class="dessert">Cinnamon Roll</p><p class="price">2.50</p>
-          </article>
-        </section>
-      </main>
-      <hr class="bottom-line">
-      <footer>
-        <p>
-          <a href="https://www.freecodecamp.org" target="_blank">Visit our website</a>
-        </p>
-        <p class="address">123 Free Code Camp Drive</p>
-      </footer>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Registration</title>
+    <link rel="stylesheet" href="styles.css"></link>
+</head>
+<body>
+    <div class="main-container">
+    
+    <div class="container">
+        <h1>Subscribe to MammothNews</h1>
+        <div class="child-container"><input type="text" placeholder="Name*" class="input"></div>
+        <div class="child-container"><input type="text" placeholder="Surname*" class="input"></div>
+        <div class="child-container"><input type="text" placeholder="Email*" class="input"></div>
+        <div class="child-container"><input type="text" placeholder="Birthday" class="input"></div>
+        <div class="child-container" id="last-container">
+            <div class="checkbox"></div>
+            <div class="content"><p>I have read and accept the terms and conditions <u>View our <br> Terms and Conditions</u> </p></div>
+        </div>
     </div>
-  </body>
+    <div class="button"><button>Submit</button></div>
+    </div>
+</body>
 </html>
